--- a/cmake/ttoolConfig.cmake.in
+++ b/cmake/ttoolConfig.cmake.in
@@ -1,6 +1,7 @@
 # ===================================================================================
 # TTOOL is developed at IBOIS, EPFL @ 2023
-# It is distributed under the GNU GPL license (https://www.gnu.org/licenses/gpl-3.0.en.html)
+# It is distributed under the GNU GPL license (https://www.gnu.org/licenses/gpl-3.0.en.html) and 
+# is build on top of TSlet (
 # ===================================================================================
 
 set(@PROJECT_NAME@_FOUND YES)
@@ -10,6 +11,10 @@ set(@PROJECT_NAME@_VERSION_MAJOR  @PROJECT_VERSION_MAJOR@)
 set(@PROJECT_NAME@_VERSION_MINOR  @PROJECT_VERSION_MINOR@)
 set(@PROJECT_NAME@_VERSION_PATCH  @PROJECT_VERSION_PATCH@)
 
+set(ttool_INSTALL_PREFIX "${CMAKE_CURRENT_LIST_DIR}/../install" CACHE PATH "ttool installation prefix")
+set(ttool_INCLUDE_DIRS ${CMAKE_INSTALL_PREFIX}/include)
+set(ttool_LIBRARY_DIRS ${CMAKE_INSTALL_PREFIX}/lib)
+set(ttool_LIBRARIES ttool)
 
 # zenodo direct doi link (to change if dataset us updated)
 set(__DSET_DOI__ "https://zenodo.org/record/8043799")
@@ -17,21 +22,3 @@ set(__DSET_DOI__ "https://zenodo.org/record/8043799")
 # ttol config loader/unloader
 set(__TTOOL_CONFIG_PATH__ "${CMAKE_CURRENT_SOURCE_DIR}/assets/config.yml")
 add_compile_definitions(__TTOOL_CONFIG_PATH__="${__TTOOL_CONFIG_PATH__}")
-
-
-
-
-# library
-set(ttool_INSTALL_PREFIX "${CMAKE_CURRENT_LIST_DIR}/../install" CACHE PATH "ttool installation prefix")
-set(ttool_INCLUDE_DIRS ${CMAKE_INSTALL_PREFIX}/src)
-set(ttool_LIBRARY_DIRS ${CMAKE_INSTALL_PREFIX}/lib)
-set(ttool_LIBRARIES ttool)
-
-# add_library(ttool INTERFACE)
-# target_include_directories(ttool INTERFACE ${ttool_INCLUDE_DIRS})
-# target_link_libraries(ttool INTERFACE ${ttool_LIBRARY_DIRS})
-# target_link_libraries(ttool INTERFACE ${ttool_LIBRARIES})
-
-
-install(FILES ${CMAKE_CURRENT_LIST_DIR}/ttoolConfig.cmake.in DESTINATION ${ttool_INSTALL_PREFIX}/lib/cmake/ttool)
-
