--- a/install/lib/cmake/ttool/ttoolConfig.cmake.in
+++ b/install/lib/cmake/ttool/ttoolConfig.cmake.in
@@ -23,7 +23,7 @@ add_compile_definitions(__TTOOL_CONFIG_PATH__="${__TTOOL_CONFIG_PATH__}")
 
 # library
 set(ttool_INSTALL_PREFIX "${CMAKE_CURRENT_LIST_DIR}/../install" CACHE PATH "ttool installation prefix")
-set(ttool_INCLUDE_DIRS ${CMAKE_INSTALL_PREFIX}/src)
+set(ttool_INCLUDE_DIRS ${CMAKE_INSTALL_PREFIX}/include)
 set(ttool_LIBRARY_DIRS ${CMAKE_INSTALL_PREFIX}/lib)
 set(ttool_LIBRARIES ttool)
 
