--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,9 @@
 cmake_minimum_required(VERSION 3.21)
 
-project(ttool VERSION "0.1.0" LANGUAGES CXX)
-include(${PROJECT_SOURCE_DIR}/cmake/ttoolConfig.cmake.in)
-configure_file(${CMAKE_CURRENT_SOURCE_DIR}/cmake/ttoolConfig.cmake.in ttoolConfig.cmake @ONLY)
+project(TTool VERSION "0.1.0" LANGUAGES CXX)
+include(${PROJECT_SOURCE_DIR}/cmake/${PROJECT_NAME}Config.cmake.in)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/cmake/${PROJECT_NAME}Config.cmake.in ${PROJECT_NAME}Config.cmake @ONLY)
+install(FILES "${PROJECT_BINARY_DIR}/${PROJECT_NAME}Config.cmake" DESTINATION share/${PROJECT_NAME} )
 
 set(CMAKE_CXX_STANDARD 17)
 
@@ -11,13 +12,13 @@ include(cmake/dataset.cmake)
 FILE(GLOB glsl_SOURCES src/shader/*.glsl)
 source_group("shader" FILES ${glsl_SOURCES})
 
-FILE(GLOB ttool_SOURCES src/*.cc)
-list(REMOVE_ITEM ttool_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cc)
+FILE(GLOB TTool_SOURCES src/*.cc)
+list(REMOVE_ITEM TTool_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cc)
 include(cmake/options.cmake)
 include(cmake/dependencies.cmake)
 
-add_library(ttool SHARED ${ttool_SOURCES} ${glsl_SOURCES})
-target_link_libraries(ttool PUBLIC
+add_library(TTool SHARED ${TTool_SOURCES} ${glsl_SOURCES})
+target_link_libraries(TTool PUBLIC
         ${OpenCV_LIBS}
         ${CMAKE_THREAD_LIBS_INIT}
         Qt5::Widgets
@@ -25,18 +26,18 @@ target_link_libraries(ttool PUBLIC
         glog::glog
         ${OPENGL_LIBRARIES}
         ${ASSIMP_LIBRARIES})
-target_include_directories(ttool PUBLIC 
+target_include_directories(TTool PUBLIC 
         ${CMAKE_CURRENT_SOURCE_DIR}/include
         ${OpenCV_INCLUDE_DIRS}
         ${OPENGL_INCLUDE_DIR})
 
-# FIXME: attach dependecies to install ttool
-install(TARGETS ttool DESTINATION lib)
-file(GLOB_RECURSE ttool_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/include/*.hh)
-foreach(HEADER_FILE ${ttool_HEADERS})
+# FIXME: attach dependecies to install TTool
+install(TARGETS TTool DESTINATION lib)
+file(GLOB_RECURSE TTool_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/include/*.hh)
+foreach(HEADER_FILE ${TTool_HEADERS})
     get_filename_component(HEADER_FILE_DIR ${HEADER_FILE} DIRECTORY)
     file(RELATIVE_PATH HEADER_FILE_DIR_REL ${CMAKE_CURRENT_SOURCE_DIR}/include ${HEADER_FILE_DIR})
-    install(FILES ${HEADER_FILE} DESTINATION include/ttool/${HEADER_FILE_DIR_REL})
+    install(FILES ${HEADER_FILE} DESTINATION include/TTool/${HEADER_FILE_DIR_REL})
 endforeach()
 
 # Add uninstall target
@@ -44,11 +45,11 @@ configure_file(
     "${CMAKE_CURRENT_SOURCE_DIR}/cmake/cmake_uninstall.cmake.in"
     "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake"
     IMMEDIATE @ONLY)
-add_custom_target(ttool_uninstall
+add_custom_target(TTool_uninstall
     COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake)
 
-# create ttool executable
+# create TTool executable
 if (OPT_BUILD_TTOOL_EXE)
     add_executable(ttoolexec src/main.cc)
-    target_link_libraries(ttoolexec ttool)
+    target_link_libraries(ttoolexec TTool)
 endif()
