--- a/cmake/TToolConfig.cmake.in
+++ b/cmake/TToolConfig.cmake.in
@@ -11,10 +11,10 @@ set(@PROJECT_NAME@_VERSION_MAJOR  @PROJECT_VERSION_MAJOR@)
 set(@PROJECT_NAME@_VERSION_MINOR  @PROJECT_VERSION_MINOR@)
 set(@PROJECT_NAME@_VERSION_PATCH  @PROJECT_VERSION_PATCH@)
 
-set(ttool_INSTALL_PREFIX "${CMAKE_CURRENT_LIST_DIR}/../install" CACHE PATH "ttool installation prefix")
-set(ttool_INCLUDE_DIRS ${CMAKE_INSTALL_PREFIX}/include)
-set(ttool_LIBRARY_DIRS ${CMAKE_INSTALL_PREFIX}/lib)
-set(ttool_LIBRARIES ttool)
+set(TTool_INSTALL_PREFIX "${CMAKE_CURRENT_LIST_DIR}/../install" CACHE PATH "TTool installation prefix")
+set(TTool_INCLUDE_DIRS ${CMAKE_INSTALL_PREFIX}/include)
+set(TTool_LIBRARY_DIRS ${CMAKE_INSTALL_PREFIX}/lib)
+set(TTool_LIBRARIES TTool)
 
 # zenodo direct doi link (to change if dataset us updated)
 set(__DSET_DOI__ "https://zenodo.org/record/8043799")
