--- a/ai/cpp_inference/CMakeLists.txt
+++ b/ai/cpp_inference/CMakeLists.txt
@@ -2,7 +2,8 @@ cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
 project(custom_ops)
 
 find_package(Torch REQUIRED)
+find_package(OpenCV REQUIRED)
 
 add_executable(example-app example-app.cpp)
-target_link_libraries(example-app "${TORCH_LIBRARIES}")
+target_link_libraries(example-app "${TORCH_LIBRARIES}" ${OpenCV_LIBS})
 set_property(TARGET example-app PROPERTY CXX_STANDARD 14)
