--- a/assets/config.yml
+++ b/assets/config.yml
@@ -5,6 +5,7 @@ zf: 4000.
 histOffset: 100
 histRad: 40
 searchRad: 25
+classifierModelPath: "/home/tpp/IBOIS/TTool/ai/torchscripts/efficientnet.pt"
 groundTruthPoses:
    - [ 9.84866619e-01, -4.03894819e-02, 1.68541461e-01, -1.62771076e-01,
        1.18437737e-01, 9.79524612e-01, -5.95245212e-02, -9.92136419e-01,
