--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,10 +24,6 @@ if(NOT GLEW_FOUND)
     message(FATAL_ERROR "GLEW not found!")
 endif()
 
-#libtorch
-set(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/deps/libtorch")
-find_package(Torch REQUIRED)
-
 add_library(TTool SHARED ${TTool_SOURCES} ${glsl_SOURCES})
 target_include_directories(TTool PUBLIC 
         ${CMAKE_CURRENT_SOURCE_DIR}/include
@@ -48,7 +44,6 @@ target_link_libraries(TTool PUBLIC
         ${ASSIMP_LIBRARIES}
         ${CMAKE_DL_LIBS}
         ${TORCH_LIBRARIES}
-        ${GLEW_LIBRARIES}
         )
 
 # FIXME: attach dependecies to install TTool
@@ -71,5 +66,10 @@ add_custom_target(TTool_uninstall
 # # create TTool executable
 if (OPT_BUILD_TTOOL_EXE)
     add_executable(ttoolexec src/main.cc)
-    target_link_libraries(ttoolexec TTool glfw ${GLFW_LIBRARIES} GLEW ${GLEW_LIBRARIES})
+    target_link_libraries(ttoolexec
+                          TTool
+                          glfw
+                          ${GLFW_LIBRARIES}
+                          GLEW
+                          )
 endif()
