ADD: pull lfs on github action

--- a/.github/workflows/docker-cmake-build.yml
+++ b/.github/workflows/docker-cmake-build.yml
@@ -14,7 +14,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-
+      with:
+        lfs: true
+    - run:  git lfs pull
     # this allows to run the submodule checkouts from the docker commands by using a PAT (Personal Access Token)
     # for each collaborator a CI_PAT is needed
     - name: Checkout submodules using a PAT
