Modified the CI to build using a container instead of while the container is built

--- a/.github/workflows/docker-cmake-build.yml
+++ b/.github/workflows/docker-cmake-build.yml
@@ -1,32 +1,43 @@
-name: docker-cmake-build
+name: "Configure and build"
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
-
   build-container:
-
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
-      with:
-        lfs: true
-    - run:  git lfs pull
-    # this allows to run the submodule checkouts from the docker commands by using a PAT (Personal Access Token)
-    # for each collaborator a CI_PAT is needed
-    - name: Checkout submodules using a PAT
-      run: |
-        git config --file .gitmodules --get-regexp url | while read url; do
-          git config --file=.gitmodules $(echo "$url" | sed -E "s/git@github.com:|https:\/\/github.com\//https:\/\/${{ secrets.CI_PAT }}:${{ secrets.CI_PAT }}@github.com\//")
-        done
-        git submodule sync
-        git submodule update --init --recursive
+      - uses: actions/checkout@v3
+      - name: Log in to Docker Hub
+        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build container
+        run: docker build -t ghcr.io/ibois-epfl/ttool:latest ${{ github.workspace }}
+      - name: Push
+        run: docker push ghcr.io/ibois-epfl/ttool:latest
 
-    - name: Build the Docker image
-      run: ./build_docker.sh
-      
+  configure-and-build:
+    needs: build-container
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/ibois-epfl/ttool:latest
+      volumes:
+        - ${{ github.workspace }}:/code
+    steps:
+      - uses: actions/checkout@v3
+      - name: Configure
+        working-directory: /code
+        run: cmake -B /code/build .
+      - uses: actions/upload-artifact@v3
+        with:
+          name: configure-artifacts
+          path: /code/build
+          retention-days: 1
+      - name: Build
+        run: cmake --build /code/build
