--- a/.github/workflows/docker-cmake-build.yml
+++ b/.github/workflows/docker-cmake-build.yml
@@ -31,6 +31,8 @@ jobs:
         - ${{ github.workspace }}:/code
     steps:
       - uses: actions/checkout@v3
+        with:
+          lfs: true
       - name: Configure
         working-directory: /code
         run: cmake -B /code/build .
