--- a/.github/workflows/docker-cmake-build.yml
+++ b/.github/workflows/docker-cmake-build.yml
@@ -27,20 +27,18 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/ibois-epfl/ttool:latest
-      volumes:
-        - ${{ github.workspace }}:/code
     steps:
       - uses: actions/checkout@v3
         with:
           lfs: true
       - name: Configure
         working-directory: /code
-        run: cmake -B /code/build .
+        run: cmake -B build .
       - uses: actions/upload-artifact@v3
         if: ${{ failure() }}
         with:
           name: configure-artifacts
-          path: /code/build
+          path: build/
           retention-days: 1
       - name: Build
-        run: cmake --build /code/build
+        run: cmake --build build
