Adding back freeglu and adding the corresponding find_package

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ if (TTOOL_BUILD_TTOOL_EXE)
         OpenGL::GL
         OpenGL::GLU
         glfw
+        GLUT::GLUT
     )
     list(APPEND TTOOL_INSTALL_TARGETS ttoolexec)
 
