--- a/.github/workflows/gen-doxygen-github-page.yml
+++ b/.github/workflows/gen-doxygen-github-page.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   Deployment:
-    runs-on: ubuntu-lastest
+    runs-on: ubuntu-latest
     
     steps:
     - uses: actions/checkout@v3
