--- a/.github/workflows/gen-doxygen-github-page.yml
+++ b/.github/workflows/gen-doxygen-github-page.yml
@@ -12,7 +12,8 @@ jobs:
     
     steps:
     - uses: actions/checkout@v3
-
+      with:
+        lfs: true
     - name: Doxygenize
       # You may pin to the exact commit or the version.
       # uses: langroodi/doxygenize@542946a13bc9021f5ba07c8751e6ab3d84bca154
