--- a/eval/environment.yml
+++ b/eval/environment.yml
@@ -2,7 +2,7 @@
 # to update the environment: conda env update --name myenv --file environment.yml --prune
 # or update with environment activated: conda env update --file environment.yml --prune
 
-name: ttooleval
+name: ttooleval2
 channels:
     - conda-forge
 dependencies:
@@ -12,5 +12,5 @@ dependencies:
      - numpy==1.20.3
      - matplotlib==3.4.3
      - pandas==2.0.2
-     - tabulate==0.8.9
+     - Jinja2==3.1.2
    - git
